World structure + ECS functional

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -32,6 +32,9 @@ add_executable(client_app
         src/entities/Component.h
         src/entities/components/EntityComponents.cpp
         src/entities/components/RenderingComponents.cpp
+        src/entities/components/ControlComponents.cpp
+        src/world/World.cpp
+        src/world/World.h
 )
 
 target_link_libraries(client_app PRIVATE common glfw Vulkan::Vulkan glm)
