--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(common STATIC
         src/Protocol.h
+        src/Socket.cpp
+        src/Socket.h
         src/Packet.cpp
         src/Packet.h
 )
